# fantastic-giggle

./: Makefile  docker-compose.yml
.github/: dependabot.yml
backend/: Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: auth.rs  lib.rs
backend/sql/: Cargo.toml
backend/sql/src/: access_token.rs  lib.rs  relationship.rs  user.rs  whitelist.rs
backend/src/: api.rs  error.rs  lib.rs  main.rs
backend/test/: Cargo.toml
backend/test/src/: lib.rs
backend/worker/: Cargo.toml
backend/worker/src/: follow_back.rs  id_sync.rs  lib.rs
db/: schema.sql
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json
