[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0", features = ["cookies"] }
dotenv = "0.15"
egg-mode = { version = "0.16", features = [] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "rt"] }
serde = { version = "1", features = ["derive"] }
