[package]
name = "fantastic-giggle-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0", features = ["cookies"] }
egg-mode = { version = "0.16", features = [] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread", "rt"] }
serde = { version = "1", features = ["derive"] }
fantastic-giggle-sql = { path = "./sql" }
fantastic-giggle-worker = { path = "./worker" }
fantastic-giggle-api = { path = "./api" }

[dev-dependencies]
fantastic-giggle-test = { path = "./test" }

[workspace]
members = ["api", "sql", "test", "worker"]
