[package]
name = "fantastic-giggle-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
sqlx = { version = "0.6.0", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
] }

[dev-dependencies]
fantastic-giggle-test = { path = "../test" }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "rt"] }
